irn-process-management-demo-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irn-process-management-demo-frontend
  labels:
    app: irn-process-management-demo-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: irn-process-management-demo-frontend
  template:
    metadata:
      labels:
        app: irn-process-management-demo-frontend
    spec:
      containers:
        - name: irn-process-management-demo-frontend
          image: registry.nosi.cv/igrp/access-management-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
