irn-process-management-demo-frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irn-process-management-demo-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: portalunico-iam-manager-dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: irn-process-management-demo-frontend-service
                port:
                  number: 8080
